--- a/dev/index.html
+++ b/dev/index.html
@@ -62,6 +62,7 @@
             <div class="infos">
               <h2>Beto Muniz</h2>
               <h3>Front-End Engineer</h3>
+              <a href="http://www.onrizon.com.br/" target="_blank" class="organizador-company">Onrizon</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/obetomuniz" target="_blank" class="icons-facebook-organizador">Facebook de Beto Muniz</a></li>
                 <li><a href="http://twitter.com/obetomuniz" target="_blank" class="icons-twitter-organizador">Twitter de Beto Muniz</a></li>
@@ -75,6 +76,7 @@
             <div class="infos">
               <h2>Paulo Pires</h2>
               <h3>Developer Relations</h3>
+              <a href="http://www.rapidoware.com.br/" target="_blank" class="organizador-company">Rapidoware</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/paulo.h.pires" target="_blank" class="icons-facebook-organizador">Facebook de Paulo Pires</a></li>
                 <li><a href="http://twitter.com/paulo_hp" target="_blank" class="icons-twitter-organizador">Twitter de Paulo Pires</a></li>
@@ -88,6 +90,7 @@
             <div class="infos">
               <h2>Paula Faria</h2>
               <h3>Front End Developer</h3>
+              <a href="http://planb.com.br/" target="_blank" class="organizador-company">Plan B</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/paulahfaria" target="_blank" class="icons-facebook-organizador">Facebook de Paula Faria</a></li>
               </ul>
@@ -100,6 +103,7 @@
             <div class="infos">
               <h2>Luiz Augusto (Luri)</h2>
               <h3>Web Developer</h3>
+              <a href="http://rccomunicacao.com.br/" target="_blank" class="organizador-company">RC Comunicação</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/lurimendes" target="_blank" class="icons-facebook-organizador">Facebook de Luiz Augusto (Luri)</a></li>
               </ul>
@@ -112,6 +116,7 @@
             <div class="infos">
               <h2>Lucas Azevedo</h2>
               <h3>Front End Developer</h3>
+              <a href="http://planb.com.br/" target="_blank" class="organizador-company">Plan B</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/lucasazevedonet" target="_blank" class="icons-facebook-organizador">Facebook de Lucas Azevedo</a></li>
               </ul>
@@ -124,6 +129,7 @@
             <div class="infos">
               <h2>André Pereira</h2>
               <h3>Analista de Sistemas</h3>
+              <a href="http://www.spread.com.br/" target="_blank" class="organizador-company">Spread</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/andrefelipecp" target="_blank" class="icons-facebook-organizador">Facebook de André Pereira</a></li>
               </ul>
@@ -136,6 +142,7 @@
             <div class="infos">
               <h2>Bruno Pulis</h2>
               <h3>Front End Developer</h3>
+              <a href="http://3bits.net/" target="_blank" class="organizador-company">3 Bits</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/bpulis" target="_blank" class="icons-facebook-organizador">Facebook de Bruno Pulis</a></li>
               </ul>
@@ -148,6 +155,7 @@
             <div class="infos">
               <h2>Carolina Bigonha</h2>
               <h3>Software Engineer</h3>
+              <a href="http://zahpee.com/#/" target="_blank" class="organizador-company">Zahpee</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/carolina.bigonha" target="_blank" class="icons-facebook-organizador">Facebook de Carolina Bigonha</a></li>
               </ul>
@@ -160,6 +168,7 @@
             <div class="infos">
               <h2>Marlos Carmo</h2>
               <h3>Manager of Digital Operations</h3>
+              <a href="http://rccomunicacao.com.br/" target="_blank" class="organizador-company">RC Comunicação</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/marloscarmo" target="_blank" class="icons-facebook-organizador">Facebook de Marlos Carmo</a></li>
               </ul>
@@ -172,6 +181,7 @@
             <div class="infos">
               <h2>Erick Belfort</h2>
               <h3>Web Developer</h3>
+              <a href="http://rccomunicacao.com.br/" target="_blank" class="organizador-company">RC Comunicação</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/erickbelfy" target="_blank" class="icons-facebook-organizador">Facebook de Erick Belfort</a></li>
               </ul>
