Alterando Onrizon para Onrizon Social Games

--- a/dev/index.html
+++ b/dev/index.html
@@ -62,7 +62,7 @@
             <div class="infos">
               <h2>Beto Muniz</h2>
               <h3>Front-End Engineer</h3>
-              <a href="http://www.onrizon.com.br/" target="_blank" class="organizador-company">Onrizon</a>
+              <a href="http://www.onrizon.com.br/" target="_blank" class="organizador-company">Onrizon Social Games</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/obetomuniz" target="_blank" class="icons-facebook-organizador">Facebook de Beto Muniz</a></li>
                 <li><a href="http://twitter.com/obetomuniz" target="_blank" class="icons-twitter-organizador">Twitter de Beto Muniz</a></li>
