--- a/dev/index.html
+++ b/dev/index.html
@@ -28,8 +28,8 @@
             </ul>
           </nav>
           <ul class="socials-minasdev horizontal-align-center">
-            <li class="horizontal-align-center"><a target="_blank" class="icons-facebook-minasdev" href="https://www.facebook.com/pages/Minas-Dev/590948884286558">Facebook do MinasDev.org</a></li>
-            <li class="horizontal-align-center"><a target="_blank" class="icons-twitter-minasdev" href="https://twitter.com/minasdev">Twitter do MinasDev.org</a></li>
+            <li class="horizontal-align-center"><a target="_blank" class="social-footer-icons  icons-facebook-minasdev" href="https://www.facebook.com/pages/Minas-Dev/590948884286558">Facebook do MinasDev.org</a></li>
+            <li class="horizontal-align-center"><a target="_blank" class="social-footer-icons  icons-twitter-minasdev" href="https://twitter.com/minasdev">Twitter do MinasDev.org</a></li>
           </ul>
       </div>
     </header>
@@ -216,8 +216,9 @@
               <li class="horizontal-align-center"><a class="goto" href="#apoios">Apoios</a></li>
           </ul>
           <ul class="socials-minasdev to-right">
-            <li class="horizontal-align-center"><a target="_blank" class="icons-facebook-minasdev" href="https://www.facebook.com/pages/Minas-Dev/590948884286558">Facebook do MinasDev.org</a></li>
-            <li class="horizontal-align-center"><a target="_blank" class="icons-twitter-minasdev" href="https://twitter.com/minasdev">Twitter do MinasDev.org</a></li>
+            <li class="horizontal-align-center"><a class="mailto-footer-minasdev" href="mailto:contato@minasdev.org">contato@minasdev.org</a></li>
+            <li class="horizontal-align-center"><a target="_blank" class="social-footer-icons icons-facebook-minasdev" href="https://www.facebook.com/pages/Minas-Dev/590948884286558">Facebook do MinasDev.org</a></li>
+            <li class="horizontal-align-center"><a target="_blank" class="social-footer-icons icons-twitter-minasdev" href="https://twitter.com/minasdev">Twitter do MinasDev.org</a></li>
           </ul>
         </div>
 
