Adicionando referencia para Google Plus Page

--- a/dev/index.html
+++ b/dev/index.html
@@ -219,6 +219,7 @@
             <li class="horizontal-align-center"><a class="mailto-footer-minasdev" href="mailto:contato@minasdev.org">contato@minasdev.org</a></li>
             <li class="horizontal-align-center"><a target="_blank" class="social-footer-icons icons-facebook-minasdev" href="https://www.facebook.com/pages/Minas-Dev/590948884286558">Facebook do MinasDev.org</a></li>
             <li class="horizontal-align-center"><a target="_blank" class="social-footer-icons icons-twitter-minasdev" href="https://twitter.com/minasdev">Twitter do MinasDev.org</a></li>
+            <li><a href="https://plus.google.com/116192016843303381755" rel="publisher"></a></li>
           </ul>
         </div>
 
