commit init. Landing Page. minasdev.org-v0.1

--- a/dev/index.html
+++ b/dev/index.html
@@ -36,7 +36,7 @@
     <section class="leads">
       <div class="wrapper center-content">
         <h1><span class="chamada-intro">Comunidade de Desenvolvedores de</span><span class="chamada-minasgerais">Minas Gerais</span></h1>
-        <form class="leads-form center-content" action="http://betomuniz.us3.list-manage.com/subscribe/post?u=50258ba79635076ed976b3238&amp;id=c864b0ba02" method="post" target="_blank">
+        <form class="leads-form center-content" action="http://minasdev.us3.list-manage.com/subscribe/post?u=50258ba79635076ed976b3238&amp;id=c864b0ba02" method="post" target="_blank">
           <label class="center-content horizontal-align-center">
             <input type="email" name="EMAIL" placeholder="Digite Seu E-Mail" required />
           </label>
