adicionando plugin docpad-plugin-partial

--- a/src/documents/beto.html
+++ b/src/documents/beto.html
@@ -7,5 +7,7 @@ title: "minasdev.org"
 
 <h2>Features</h2>
 <ul>
-  <li><a href="eco.html">Eco</a></li>
+  <li><a href="eco.html">Beto</a></li>
+  
+  
 </ul>
