new partners and members

--- a/dev/index.html
+++ b/dev/index.html
@@ -62,7 +62,7 @@
             <div class="infos">
               <h2>Beto Muniz</h2>
               <h3>Front-End Engineer</h3>
-              <a href="http://www.onrizon.com.br/" target="_blank" class="organizador-company">Onrizon Social Games</a>
+              <a href="http://www.ezlike.com.br/" target="_blank" class="organizador-company">EzLike</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/obetomuniz" target="_blank" class="icons-facebook-organizador">Facebook de Beto Muniz</a></li>
                 <li><a href="http://twitter.com/obetomuniz" target="_blank" class="icons-twitter-organizador">Twitter de Beto Muniz</a></li>
@@ -75,8 +75,8 @@
             </div>
             <div class="infos">
               <h2>Paulo Pires</h2>
-              <h3>Developer Relations</h3>
-              <a href="http://www.rapidoware.com.br/" target="_blank" class="organizador-company">Rapidoware</a>
+              <h3>Software Developer</h3>
+              <a href="http://tagon8.com/" target="_blank" class="organizador-company">Tagon8 Inc.</a>
               <ul class="organizador-social">
                 <li><a href="http://fb.com/paulo.h.pires" target="_blank" class="icons-facebook-organizador">Facebook de Paulo Pires</a></li>
                 <li><a href="http://twitter.com/paulo_hp" target="_blank" class="icons-twitter-organizador">Twitter de Paulo Pires</a></li>
@@ -199,12 +199,38 @@
               </ul>
             </div>
           </div>
-          
 
+          <div class="organizador">
+            <div class="thumbnail giovanni">
+            </div>
+            <div class="infos">
+              <h2>Giovanni Keppelen</h2>
+              <h3>Chief Technology Officer</h3>
+              <a href="http://rccomunicacao.com.br/" target="_blank" class="organizador-company">Planedia</a>
+              <ul class="organizador-social">
+                <li><a href="http://fb.com/keppelen" target="_blank" class="icons-facebook-organizador">Facebook de Giovanni Keppelen</a></li>
+                <li><a href="http://twitter.com/keppelen" target="_blank" class="icons-twitter-organizador">Twitter de Paulo Pires</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="organizador">
+            <div class="thumbnail ruy">
+            </div>
+            <div class="infos">
+              <h2>Ruy Adorno</h2>
+              <h3>Web Developer</h3>
+              <a href="http://www.sungard.com/" target="_blank" class="organizador-company">SunGard</a>
+              <ul class="organizador-social">
+                <li><a href="http://fb.com/ruy.adorno" target="_blank" class="icons-facebook-organizador">Facebook de Ruy Adorno</a></li>
+                <li><a href="http://twitter.com/ruyadorno" target="_blank" class="icons-twitter-organizador">Twitter de Ruy Adorno</a></li>
+              </ul>
+            </div>
+          </div>
 
         </div>
 
-        <p class="chamada-facaparte">Junte-se a nós e ajude a transformar o mercado mineiro!</p>
+        <p class="chamada-facaparte">Junte-se a nós. Faça algo e ajude a transformar o mercado mineiro!</p>
       </div>
     </section>
     <footer>
@@ -226,15 +252,18 @@
         <div class="footer-apoios overflowfix" id="apoios">
           <h1>APOIOS</h1>
           <ul class="apoios">
-              <!-- <li class="to-left"><a href=""><img src="http://devincompany.org/assets/apoios/jchebly.png" alt=""></a></li>
-              <li class="to-left"><a href=""><img src="http://devincompany.org/assets/apoios/onrizon-social-games.png" alt=""></a></li> -->
-              <!-- <li class="to-left"><a href=""><img src="http://devincompany.org/assets/apoios/casa-do-codigo.png" alt=""></a></li> -->
-              <li class="to-left"><a target="_blank" href="http://devincompany.org/"><img src="http://devincompany.org/assets/apoios/devincompany.png" alt=""></a></li>
-              <li class="to-left"><a target="_blank" href="http://braziljs.org/"><img src="http://devincompany.org/assets/apoios/braziljs.png" alt=""></a></li>
-              <li class="to-left"><a target="_blank" href="https://www.facebook.com/DevCast"><img src="http://devincompany.org/assets/apoios/devcast.png" alt=""></a></li>
-              <li class="to-left"><a target="_blank" href="http://www.rapidoware.com.br/"><img src="http://devincompany.org/assets/apoios/rapidoware.png" alt=""></a></li>
-              <li class="to-left"><a target="_blank" href="http://rccomunicacao.com.br/"><img src="http://devincompany.org/setembro-2013/themes/yellow-swan/img/rc-comunicacao.jpg" alt=""></a></li>
-              <!-- <li class="to-left"><a href=""><img src="http://devincompany.org/assets/apoios/casa-do-codigo.png" alt=""></a></li> -->
+              <!-- <li class="to-left"><a href=""><img src="statics/images/apoios/casa-do-codigo.png" alt=""></a></li> -->
+              <li class="to-left"><a target="_blank" href="http://devincompany.org/"><img src="statics/images/apoios/devincompany.png" alt=""></a></li>
+              <li class="to-left"><a target="_blank" href="http://braziljs.org/"><img src="statics/images/apoios/braziljs.png" alt=""></a></li>
+              <li class="to-left"><a target="_blank" href="https://www.facebook.com/DevCast"><img src="statics/images/apoios/devcast.png" alt=""></a></li>
+
+
+              <li class="to-left"><a target="_blank" href="http://www.eventick.com.br/"><img src="statics/images/apoios/eventick.png" alt=""></a></li>
+              <li class="to-left"><a target="_blank" href="http://frontinbh.com.br/"><img src="statics/images/apoios/frontinbh.png" alt=""></a></li>
+              <li class="to-left"><a target="_blank" href="http://www.rapidoware.com.br/"><img src="statics/images/apoios/rapidoware.png" alt=""></a></li>
+              <li class="to-left"><a target="_blank" href="http://rccomunicacao.com.br/"><img src="statics/images/apoios/rc-comunicacao.jpg" alt=""></a></li>
+              <li class="to-left"><a target="_blank" href="http://www.casadocodigo.com.br/"><img src="statics/images/apoios/casa-do-codigo.png" alt=""></a></li>
+              <li class="to-left"><a target="_blank" href="http://jchebly.com.br/"><img src="statics/images/apoios/jchebly.png" alt=""></a></li>
 
           </ul>
         </div>
