html reader semantico

--- a/src/documents/index.html
+++ b/src/documents/index.html
@@ -3,9 +3,43 @@ layout: "default"
 title: "minasdev.org"
 ---
 
-<p>Welcome to minasdev.org.</p>
 
-<h2>Features</h2>
-<ul>
-  <li><a href="eco.html">Eco</a></li>
-</ul>
+
+<div class="header-body">
+  <div class="resume-container">
+    <div class="header-resume-top-left-box">
+      <h2>
+        <span class="header-resume-icon ir">paper clip</span>
+        FEED
+      </h2>
+    </div>
+    <div class="header-resume-top-right-box">
+      Header Resume Events
+    </div>
+    <div class="header-resume-bottom-left-box">
+      Header Resume Monthly
+    </div>
+    <div class="header-resume-bottom-right-box">
+      Header Resume Social
+    </div>
+  </div>
+</div>
+
+
+
+
+<div class="inner">
+	<img src="" alt="">
+
+	<h1>Comunidade de Desenvolvedores de <em>Minas Gerais</em></h1>
+
+	<aside role="complementary" class="social">
+	  <ul class="footer-itens">
+	  	<li class="ico-rss"><a href="#" rel="external" aria-label="Assine o RSS do Minas Dev">RSS</a> </li>
+	  	<li class="ico-plus"><a href="#" rel="external" aria-label="">Google Plus</a></li>
+	  	<li class="ico-tw"><a href="#" rel="external" aria-label="Página Oficial do Minas Dev no Twitter">Twitter</a></li>
+	  	<li class="ico-fb"><a href="#" rel="external" aria-label="Curte o Minas Dev no Facebook">Facebook</a></li>
+	  </ul>	
+	</aside>
+</div>
+
